[package]
name = "chest_royale_server_unhackable_trust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
